# html-mutation

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.github/workflows/: build.yaml
html_mutation/html/: compare.py  dom.py  driver.py  parser.py  tags.py
html_mutation/mutation/: generator.py  operator.py  strategy.py  validator.py
html_mutation/persistence/: persistence.py
tests/html/: test_compare.py  test_dom.py
tests/mutation/: test_generator.py  test_operator.py
